[package]
name = "hsv_to_rgb"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
critical-section-lock-mut = "0.1.2"
embedded-hal = "1.0.0"
microbit-v2 = "0.16.0"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.2"

[features]
debug-output = []
